# minihive

./: .gitignore  README.md  plugin.json  pyproject.toml
.claude-plugin/: plugin.json
commands/: minihive.md
src/minihive/: __init__.py  __main__.py  config.py  contracts.py  dag_executor.py  file_context.py  git_ops.py  isolated_query.py  orchestrator.py  pm_agent.py  project_context.py  prompts.py  sdk_client.py
tests/: test_contracts.py  test_dag.py
