[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minihive"
version = "0.1.0"
description = "Multi-agent orchestrator — PM plans, agents build in parallel, test, review, commit"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "claude-agent-sdk",
]

[project.scripts]
minihive = "minihive.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
